Define the testimonial component

--- a/css/styles.css
+++ b/css/styles.css
@@ -162,6 +162,15 @@ a{
     fill: var(--color-primary);
 }
 
+.icon--white{
+    fill: #fff;
+}
+
+.icon--small{
+    width: 30px;
+    height: 30px;
+}
+
 .icon-container{
     background: #f3f9fa;
     width: 64px;
@@ -170,6 +179,10 @@ a{
     display: inline-flex;
     justify-content: center;
     align-items: center;
+}
+
+.icon-container--accent{
+   background: var(--color-accent);  
 }
 
 /*Buttons*/
@@ -420,5 +433,51 @@ a{
 
     .quote__company{
         font-size: 1.6rem;
+    }
+  }
+
+  /*Grids*/
+  .grid{
+    display: grid;
+  }
+
+  @media screen and (min-width: 768px) {
+    .grid--1x2 {
+        grid-template-columns: repeat(2, 1fr);
+    }
+  }
+
+  @media screen and (min-width: 1024px) {
+    .grid--1x3 {
+       grid-template-columns: repeat(3, 1fr);
+    }
+  }
+
+  /*Testimonial*/
+  .testimonial{
+    padding: 3rem;
+  }
+
+  .testimonial__image{
+    position: relative;
+  }
+
+  .testimonial__image > img{
+    width: 100%;
+  }
+
+  .testimonial__image > .icon-container{
+    position: absolute;
+    top: 3rem;
+    right: -32px;
+  }
+
+  @media screen and (min-width: 768px) {
+    .testimonial .quote, .testimonial .quote__author{
+        font-size: 2.4rem;
+    }
+
+    .testimonial .quote{
+        margin-left: 6rem;
     }
   }
