Define the callouts component

--- a/css/styles.css
+++ b/css/styles.css
@@ -226,6 +226,11 @@ a{
     background: #ec3000;
 }
 
+.btn--stretched{
+   padding-left: 6rem;
+   padding-right: 6rem;
+}
+
 .btn--block{
     width: 100%;
     display: inline-block;
@@ -481,3 +486,43 @@ a{
         margin-left: 6rem;
     }
   }
+
+   /*Callouts*/
+   .callout {
+    padding: 4rem;
+    border-radius: 5px;
+   }
+
+   .callout--primary{
+    background-color: var(--color-primary);
+    color: #fff;
+   }
+
+   .callout__heading{
+    color: #fff;
+    margin-top: 0;
+    font-size: 3rem;
+   } 
+
+   .callout .btn{
+    align-self: center;
+    justify-self: center;
+   }
+
+   .callout__content{
+    text-align: center;
+   }
+   
+   @media screen and (min-width: 768px) {
+    .callout .grid--1x2{
+        grid-template-columns: 1fr auto;
+    }
+    .callout__content{
+        text-align: left;
+    }
+
+    .callout .btn{
+        justify-self: start;
+        margin: 0 2rem;
+    }
+   }
