--- a/css/styles.css
+++ b/css/styles.css
@@ -319,11 +319,19 @@ a{
     color: #fff;
   }
 
+  .card--primary .badge--primary{
+    background: #126de4;
+  }
+
   .card--secondary .badge--secondary {
     background: #02cdf1;
   }
 
   /*Plans*/
+  .plan{
+    transition: transform .2s ease-out;
+  }
+
   .plan__name {
     color: #fff;
     margin: 0;
@@ -353,6 +361,10 @@ a{
     margin-bottom: 2rem;
   }
 
+  .plan--popular{
+    transform: scale(1.1);
+  }
+
   .plan--popular .card__header {
     position: relative;
   }
@@ -365,7 +377,14 @@ a{
     top: -6px;
     right: 5%;
   }
-  
+  .plan:hover{
+    transform: scale(1.05);
+  }
+
+  .plan--popular:hover{
+    transform: scale(1.15);
+  }
+
   @media screen and (min-width: 1024px) {
     .plan__name {
       font-size: 1.4rem;
@@ -718,4 +737,14 @@ a{
   .block-domain__prices{
     grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
   }
+}
+
+/*Plans Block*/
+.block-plans .grid{
+  gap: 8rem 4rem;
+}
+
+.block-plans .card{
+  max-width: 500px;
+  margin: 0 auto;
 }
