Define the block features element

--- a/css/styles.css
+++ b/css/styles.css
@@ -746,5 +746,28 @@ a{
 
 .block-plans .card{
   max-width: 500px;
-  margin: 0 auto;
+  margin: 12rem 0;
+}
+
+/*Features*/
+.feature{
+  gap: 4rem 2rem;
+}
+
+.feature:first-of-type {
+  margin-top: 6rem;
+}
+
+.feature__heading{
+  margin: 1rem 0;
+}
+
+.feature__images{
+  width: 100%;
+}
+
+@media screen and (min-width: 768px) {
+  .feature:nth-of-type(even) .feature__content{
+    order: 2;
+  }
 }
