--- a/css/styles.css
+++ b/css/styles.css
@@ -792,3 +792,81 @@ a{
     max-width: 700px;
   }
 }
+
+/*Footer*/
+.footer{
+  background: #232323;
+}
+
+.footer__section{
+  padding: 2rem;
+  border-bottom: 1px solid #393939;
+}
+
+.footer__section .list{
+  margin: 0;
+}
+
+.footer__heading{
+  text-transform: uppercase;
+  font-weight: 600;
+  color: #fff ;
+}
+
+.footer__brand{
+  margin-top: 5rem;
+  text-align: center;
+}
+
+.footer__brand img{
+  /*TODO: Consider refactoring this and applyong it to all images*/
+  width: 100%;
+  max-width: 230px;
+}
+
+.footer__copyright{
+  font-size: 1rem;
+  color: #fff;
+  opacity: 0.3;
+}
+
+.footer a{
+  color: #777;
+  transition: color 0.3s;
+}
+
+.footer a:hover {
+  color: #fff;
+}
+
+@media screen and (min-width: 768px) {
+  .footer__sections{
+    grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
+  }
+
+  .footer .collapsible__chevron{
+    display: none;
+  }
+
+  .footer .collapsible__content{
+    opacity: 1;
+    max-height: 100%;
+  }
+
+  .footer__brand{
+    order: -1;
+    margin-top: 1rem;
+  }
+
+  .footer__copyright{
+    font-size: 1.5rem;
+  }
+
+  .footer__section{
+    border: 0;
+  }
+
+  .footer__heading{
+    font-size: 1.6rem;
+  }
+}
